# CppLabExercises

./: README.md
CppLab02/: CMakeLists.txt  Main.cpp
CppLab02/include/: GOperations.h  GSeries.h
CppLab02/src/: GOperations.cpp  GSeries.cpp
CppLab03/: Main.cpp
CppLab03/include/: Student.h  StudentList.h
CppLab03/src/: Student.cpp
CppLab04/: CMakeLists.txt  Main.cpp
CppLab04/include/: MapPoint.h
CppLab04/src/: MapPoint.cpp
CppLab13/: CMakeLists.txt  Main.cpp
CppLab13/include/: Kolo.h  Ksztalt.h  Kwadrat.h
CppLab13/src/: Kolo.cpp  Ksztalt.cpp  Kwadrat.cpp
CppLab14/: CMakeLists.txt  main.cpp
CppLab14/include/: Point.h
CppLab14/src/: Point.cpp
